# peerai

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  INTELLIGENT_CHATBOT_TEMPLATE.md  LOGGING.md  PrivateKey.rsa  PublicKey.pem  RAG_CHATBOT_TEMPLATE.md  README.md  alembic.ini  compare_content.sh  create-linear-issue.js  direct-access.html  docker-compose.yml  fix-nginx.sh  fix_app_documents.sql  fix_nginx.sh  fixed_deploy.sh  fixed_nginx.conf  intelligent-chatbot-template-config.json  intelligent-chatbot-template.html  knowledge-base-search-fixed.html  modular_deploy.yml  nginx.conf  nginx_config.txt  package-lock.json  package.json  peerai-backend.service  peerai.conf  pyproject.toml  rag-chatbot.html  requirements.txt  revert_to_app_id.sql  revert_to_app_id_fixed.sql  server_deploy.sh  server_dump.backup  setup.py  update_app_id.sql  update_app_id_fixed.sql  (+1 more)
.github/workflows/: ci.yml  deploy.yml  deploy_split.yml  modular_deploy.yml
.lsp/.cache/: db.transit.json
alembic/: env.py
api/: config.py  database.py  main.py
api/models/: auth.py  (+1 more)
apps/: rag-chatbot-340.html
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  build.sh  check_alembic.py  check_models.py  check_tables.py  config.py  create_model_tables.py  database.py  main.py  pyproject.toml  requirements.txt  server.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 000f1cba6e74_merge_heads.py  13161fcee912_add_created_at_back_to_usage_records.py  160b9131b424_add_token_limit_to_users.py  20250222_004903_base_revision.py  20f9d2e4e4e9_merge_heads.py  4ed7edfa6a16_add_token_limit_to_users.py  5b7a1ccd6324_merge_existing_heads.py  5bded3ce5e9e_add_rbac_implementation.py  6f0a3ecedcec_initial_schema_based_on_current_models.py  75727fa631b4_update_system_settings_model.py  775fcc5fd19a_fix_missing_revision.py  85766947a5e5_update_role_enum_values.py  891d11b2a31d_add_icon_type_to_app_templates.py  9597eef8850a_add_system_settings_table.py  9b359a119dfc_add_referrals_table.py  a1b2c3d4e5f6_add_ai_apps_table.py  add_content_manager_role.py  add_created_at_to_system_settings_new.py  add_dark_icon_url_column.py  add_deployed_apps_table.py  add_document_tables.py  add_rag_tables.py  e4ecb0a9d0ed_update_app_templates_schema.py  f8243840b28d_add_updated_by_to_system_settings.py  fix_model_registry_migration.py  fix_referral_migration.py  fix_referral_system_migration.py  merge_heads_for_deployed_apps.py  model_registry_migration.py  rename_role.py  update_deployed_apps_schema.py
backend/backend/: main.py
backend/config/: __init__.py  model_defaults.py
backend/core/: __init__.py  auth.py  roles.py  security.py
backend/migrations/versions/: add_default_api_key_id.py
backend/models/: __init__.py  ai_apps.py  api_key.py  app_templates.py  auth.py  base.py  deployed_apps.py  documents.py  models.py  rag.py  referral.py  settings.py  system_settings.py  usage.py  usage_record.py  user.py
backend/routes/: admin.py  admin_models.py  app_store.py  app_templates.py  auth.py  deployed_apps.py  documents.py  embeddings.py  inference.py  public_apps.py  rag.py  rbac.py  referral.py  temp_documents.py
backend/schemas/: admin.py  app_store.py  app_templates.py  auth.py  deployed_apps.py  documents.py  rag.py  rbac.py
backend/scripts/: add_default_api_key.py  add_icon_type_column.py  add_internal_docs_app.py  check_alembic_version.py  check_models_exist.py  check_rag_template.py  check_schema.py  check_schema_raw.py  check_schema_text.py  check_templates.py  check_users.py  create_admin.py  create_default_api_keys.py  create_document_tables.sql  create_test_users.py  delete_all_templates.py  intelligent-chatbot-template-config.json  intelligent-chatbot-template.html  rag-chatbot-admin.html  rag-chatbot-template-config.json  rag-chatbot-template.html  run_role_update.py  seed_app_store.py  seed_app_templates.py  seed_app_templates_fixed.py  seed_app_templates_simple.py  seed_mistral_models.py  seed_rag_chatbot_template.py  seed_test_users.py  simple-chatbot-template.html  sync_database.py  sync_db.sh  update_deployed_apps.py  update_rag_templates.py  update_role_enum.sql  update_template_icons.py  verify_db.py
backend/scripts/apps/: rag-chatbot-974.html
backend/services/: __init__.py  analytics.py  document_processor.py  email.py  model_orchestrator.py  rag_service.py  rbac.py  referral.py
backend/utils/: template_helpers.py
deploy-package/: .env.example
deployment/: README.md  bahnhof.service  deploy_unified.sh  nginx-single-server.conf  nginx.conf  peerai-unified.service  run_deploy.sh  start_single_server.sh
docs/: deployment.md  github-auth-guide.md  model_management.md
orchestrator/: main.py
scripts/: README.md  backup_db.sh  build.sh  check_db_constraints.sh  check_deployment.sh  check_models.sh  cleanup.sh  comprehensive_fix.sh  connect_to_vm.sh  copy_backup_to_vm.sh  create_admin_user.sh  create_test_page.sh  debug_migrations.sh  deploy.sh  dev.sh  diagnose_github_repo.sh  diagnose_postgres.sh  diagnose_ssh.sh  diagnose_ssh_locally.sh  emergency_db_fix.sql  export_pr.py  export_pr.sh  final_fix.sh  fix-nginx.sh  fix_constraint_issue.sh  fix_file_permissions.sh  fix_frontend_build.sh  fix_github_actions.sh  fix_migration.sh  fix_nginx.sh  fix_nginx_root.sh  fix_permissions.sh  fix_postgres_auth.sh  init_db.sh  init_db_auto.sh  init_vm.sh  manual_github_setup.sh  pre_deploy.sh  pre_launch_check.py  pre_migration_checker.sh  (+19 more)
tests/: README.md  conftest.py  locustfile.py  test_admin.py  test_api_integration.py  test_auth.py  test_basic_functionality.py  test_db_integration.py  test_inference.py  test_rbac.py  test_settings.py
(+165 files in other folders)
