[project]
name = "peerai"
version = "0.1.0"
description = "PeerAI - Swedish-based LLM inference service"
authors = [
    {name = "Peer Digital Sweden AB"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",  # API framework
    "uvicorn>=0.27.0",  # ASGI server
    "pydantic>=2.6.0",  # Data validation
    "pydantic-settings>=2.1.0",  # Settings management
    "sqlalchemy>=2.0.25",  # Database ORM
    "alembic>=1.13.0",  # Database migrations
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    "python-multipart>=0.0.9",  # Form data handling
    "httpx>=0.26.0",  # HTTP client for testing
    "requests>=2.31.0",  # HTTP client for scripts and tools
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "orchestrator"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",  # For async test support
    "black>=23.7.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "locust>=2.24.0",  # Load testing
    "trufflehog>=3.63.2",  # Secret scanning
    "detect-secrets>=1.4.0",  # Additional secret detection
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "locust>=2.24.0",  # Load testing
]

monitoring = [
    "sentry-sdk>=1.40.0",  # Error tracking
    "prometheus-client>=0.19.0",  # Metrics collection
] 