[project]
name = "peerai"
version = "0.1.0"
description = "PeerAI - Swedish-based LLM inference service"
authors = [
    {name = "Peer Digital Sweden AB"}
]
requires-python = ">=3.11"
dependencies = [
    # @url: https://fastapi.tiangolo.com/
    "fastapi>=0.109.0",
    # @url: https://www.uvicorn.org/
    "uvicorn>=0.27.0",
    # @url: https://www.sqlalchemy.org/
    "sqlalchemy>=2.0.25",
    # @url: https://alembic.sqlalchemy.org/
    "alembic>=1.13.0",
    # @url: https://www.psycopg.org/
    "psycopg2-binary>=2.9.9",
    # @url: https://python-jose.readthedocs.io/
    "python-jose[cryptography]>=3.3.0",
    # @url: https://passlib.readthedocs.io/
    "passlib[bcrypt]>=1.7.4",
    # @url: https://python-bcrypt.readthedocs.io/
    "bcrypt>=3.2.2",
    # @url: https://python-multipart.readthedocs.io/
    "python-multipart>=0.0.9",
    # @url: https://pydantic-docs.helpmanual.io/
    "pydantic[email]>=2.6.0",
    # @url: https://pydantic-settings.helpmanual.io/
    "pydantic-settings>=2.1.0",
    # @url: https://python-dotenv.readthedocs.io/
    "python-dotenv>=1.0.0",
    # @url: https://www.python-httpx.org/
    "httpx>=0.26.0",
    # @url: https://requests.readthedocs.io/
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "coverage>=7.4.1",
    "locust>=2.24.0",
    # Linting and formatting
    "black>=23.9.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    # Security
    "trufflehog3>=3.0.3",
    "detect-secrets>=1.4.0",
    # Development tools
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
] 