[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peerai-api"
version = "0.1.0"
description = "PeerAI API"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pydantic-settings",
    "python-jose",
    "passlib",
    "python-multipart",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["."] 